test/error/unterminated_comment.let
print 1;
/* this comment never ends
