test/error/unterminated_comment.err
test/error/unterminated_comment.let:2:1-2:27: error: non-terminated multiline comment
1 error(s) encountered
